bootstrap theme, fixed old broken css

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -15,3 +15,7 @@
 .interior {
     margin-top: 1em;
 }
+
+.auth-container {
+    padding: 50px;
+}
